# building-a-local-LLM-agent-with-WebUI

./: .gitignore  Build Your Own Claude Code Web UI in 280 Lines of Python.mhtml  Build Your Own Claude Code in 250 Lines of Python.mhtml  README.md  pyproject.toml
stage1/src/chat_ui_01/: main.py
stage2/src/chat_ui_02/: main.py
stage3/: index.html
stage3/src/chat_ui_03/: main.py
stage4/: index.html
stage4/src/chat_ui_04/: main.py
stage5/: index.html
stage5/src/chat_ui_05/: main.py
stage6/: index.html
stage6/skills/: HUMANIZER.md  SECURITY_AUDITOR.md
stage6/src/chat_ui_06/: main.py
stage7/: index.html
stage7/skills/: HUMANIZER.md  SECURITY_AUDITOR.md
stage7/src/chat_ui_07/: main.py
